--- a/src/main/resources/views/EditUserConfig.fxml
+++ b/src/main/resources/views/EditUserConfig.fxml
@@ -6,10 +6,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.geometry.Insets?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cakeshopsystem.controllers.EditUserConfigController"
-            prefHeight="400.0" prefWidth="600.0">
+            fx:controller="com.cakeshopsystem.controllers.EditUserConfigController">
+    <padding>
+        <Insets bottom="25.0" left="25.0" right="25.0" top="25.0"/>
+    </padding>
     <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
           AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <Label styleClass="title" text="User Configuration"/>
